# qoi-starter-project

./: .cmake-format.json  .gitignore  B00738286.patch  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  qoi.hexpat  run_viewer.sh  vcpkg.json
benchmark/: CMakeLists.txt  benchmark.in.cpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
data/: testcard.bmp:Zone.Identifier
data/benchmark/: 0.qoi  1.qoi  2.qoi
data/fuzzing/: bad.0.qoi  bad.1.qoi  bad.3.qoi  good.qoi
docs/: CMakeLists.txt  Doxyfile.in  README.md
fuzz_test/: CMakeLists.txt  dictionary.txt  fuzz_test.c
info/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/qoi/: qoi.c  qoi.h
src/qoi/details/: unused.h
test/: CMakeLists.txt  README.md
test/qoi/: sum.cpp
viewer/: CMakeLists.txt  README.md  main.c
